[package]
name = "frontdoor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
packr-guest = { version = "0.8.1", features = ["derive", "pic"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
# LTO MUST stay ON for the PIC (packr-guest `pic` feature) build. Under the
# `-shared` PIC link, fat LTO recompiles the precompiled `core`/`alloc`
# bitcode as position-independent; WITHOUT it, lld links the non-PIC sysroot
# `liballoc` object as-is and aborts with `relocation R_WASM_* ... recompile
# with -fPIC`. (The `__heap_base`/`__data_end` placeholders come from
# packr-guest's `pic` feature and survive here; the earlier "not found"
# failure was crane's synthetic deps-only crate lacking packr-guest — fixed
# in flake.nix by dropping buildDepsOnly.) Matches inbox-ui / mesh. Keep true.
lto = true
