[package]
name = "frontdoor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# packr 0.10.2 self-contained model (PIC retired). Keep `derive` — frontdoor's
# routing state uses #[derive(Clone, GraphValue)] (src/lib.rs). The fixed-base
# link recipe lives in .cargo/config.toml; `theater build` fuses this member
# with the packr bundled allocator into frontdoor.composite.wasm. See theater
# docs/self-contained-actor-recipe.md.
packr-guest = { version = "0.10.2", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
